Correct squashed sidebar at narrow widths
This isn't perfect, the sidebar is still truncated below certain
widths, but good enough for now

--- a/app/assets/css/pages/_landing.scss
+++ b/app/assets/css/pages/_landing.scss
@@ -11,7 +11,7 @@
     grid-template-areas:
       "banner banner"
       "article sidebar";
-    grid-template-columns: 1fr 30%;
+    grid-template-columns: 1fr min-content;
   }
 }
 
